--- a/main.html
+++ b/main.html
@@ -10,11 +10,15 @@
     </head>
 
     <header>
-
+        <div class='imgbox'>
+        <img class="center-fit" src="doomsday.png">
+        </div>
     </header>
 
     <body>
-
+        <div class="assignment">
+            <div span="name">assignment 1</div>
+        </div>
     </body>
 
     <footer>
