--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 
     <body>
         <div class="assignment">
-            <div span="name">assignment 1</div>
+            <div class="name">assignment 1</div>
         </div>
     </body>
 
