--- a/main.html
+++ b/main.html
@@ -18,6 +18,14 @@
     <body>
         <div class="assignment">
             <div class="name">assignment 1</div>
+
+            <div class="due-date">time left</div>
+        </div>
+
+        <div class="assignment">
+            <div class="name">assignment 2</div>
+
+            <div class="due-date">time left</div>
         </div>
     </body>
 
