--- a/test_form.html
+++ b/test_form.html
@@ -1,27 +1,31 @@
-n = new Date();
-y = n.getFullYear();
-m = n.getMonth() + 1;
-d = n.getDate();
-document.getElementById("date").innerHTML = m + "/" + d + "/" + y;
+<script src="doomsday.js"></script>
 
-<script> document.getElementById("date").value = new Date().getDate();
-    document.getElementById("date").min = new Date().getDate();
-</script>
-
-<form accept-charset="UTF-8" action="action_page.php" autocomplete="off" method="GET" target="_blank">
-    <fieldset>
-        <legend>Add Task:</legend> <label for="name">Task Name</label>
-        <br /> <input name="name" id = "name" type="text" value="" required /> <br /> 
-        <label for="date">Date due:</label>
-        <input type="date" id="date" name="due-date" value="2020-03-01" min="2018-01-01" required>
-        <label for="time">Time due:</label>
-        <input type="time" id="time" name="due-time" min="00:00" max="23:" required>
-        <button type="submit" value="Submit">Submit</button>
-    </fieldset>
+<form
+  accept-charset="UTF-8"
+  action="action_page.php"
+  autocomplete="off"
+  method="GET"
+  target="_blank"
+>
+  <legend>Add Task:</legend>
+  <label for="name">Task Name</label> <br />
+  <input name="name" id="name" type="text" value="" required /> <br />
+  <label for="date">Date due:</label>
+  <input
+    type="date"
+    id="date"
+    name="due-date"
+    value="2020-03-01"
+    min="2018-01-01"
+    required
+  />
+  <label for="time">Time due:</label>
+  <input type="time" id="time" name="due-time" min="00:00" max="23:" required />
+  <button type="submit" value="Submit">Submit</button>
 </form>
 
 <script>
-    console.log(document.getElementById("name").value)
-    console.log(document.getElementById("date").value)
-    console.log(document.getElementById("time").value)
+  console.log(document.getElementById("name").value);
+  console.log(document.getElementById("date").value);
+  console.log(document.getElementById("time").value);
 </script>
